database/postgresql/postgresql-statefulset.yaml
# PostgreSQL StatefulSet Service
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-lb
  namespace: databases
spec:
  selector:
    app: postgresql-db
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
---
#PostgreSQL StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-db
  namespace: databases
spec:
  serviceName: postgresql-db-service
  selector:
    matchLabels:
      app: postgresql-db
  replicas: 2
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      containers:
        - name: postgresql-db
          image: postgres:14.1
          volumeMounts:
            - name: postgresql-db-disk-claim
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: postgresql-db-disk-claim
      spec:
        storageClassName: "manuel"
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
