database/postgresql/pgadmin-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: databases
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pgadmin.market.fr`)
      kind: Rule
      services:
        - name: pgadmin-headless
          port: 80
